# simple-cr-sim

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  testing.ipynb
notebooks/: analyse_img.ipynb  create_img.ipynb  gen_masks.ipynb
scrs/: __init__.py  constants.py  cosmics.py  utils.py
scrs/image/: __init__.py  image.py  logger.py  simage.py
