[tool.poetry]
name = "scrs"
version = "0.1.0"
description = "A simple star and cosmic ray simulator."
authors = ["Benjamin van de Vorstenbosch <bencvdv@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astropy = "^6.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
python-dotenv = "^1.0.1"
lacosmic = "^1.1.0"
astroscrappy = "^1.2.0"
pycosmic = {git = "git@github.com:brandherd/PyCosmic.git"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
jupyter = "^1.1.1"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
scrs = "scrs.main:run"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
